--- a/views/layouts/front-page.ejs
+++ b/views/layouts/front-page.ejs
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="home d-flex flex-column h-100">
     <%- include('../partials/header.ejs') %>
         <%- body %>
             <%- include('../partials/footer.ejs') %>
